SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/POV__c.object-meta.xml
<CustomObject>
    <label>POV</label>
    <nameField>
        <label>POV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>