SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POVs</relationshipLabel>
    <relationshipName>POVs</relationshipName>
    <type>Lookup</type>
</CustomField>