SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Evaluation_checklist_sent__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_checklist_sent__c</fullName>
    <label>Evaluation checklist sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>