SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>POVs</relationshipLabel>
    <relationshipName>POVs</relationshipName>
    <type>Lookup</type>
</CustomField>