SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/POV_End_Date__c.field-meta.xml
<CustomField>
    <fullName>POV_End_Date__c</fullName>
    <label>POV End Date</label>
    <type>Date</type>
</CustomField>