SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/POV_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>POV_Plan_URL__c</fullName>
    <label>POV Plan URL</label>
    <type>Url</type>
</CustomField>