SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/SE_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>SE_Next_Steps__c</fullName>
    <label>SE Next Steps</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>