SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>POV Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue</fullName>
                <default>true</default>
                <label>Queue</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Pre-POV</fullName>
            </value>
            <value>
                <fullName>POV</fullName>
            </value>
            <value>
                <fullName>BVA</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>