SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Success_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success Criteria Met</label>
    <type>Checkbox</type>
</CustomField>