SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Sync_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Opportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync to Opportunity</label>
    <type>Checkbox</type>
</CustomField>