SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Technical_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Technical_Blockers__c</fullName>
    <label>Technical Blockers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>