SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Technical_evaluation_duration__c.field-meta.xml
<CustomField>
    <fullName>Technical_evaluation_duration__c</fullName>
    <label>Technical evaluation duration</label>
    <length>55</length>
    <type>Text</type>
</CustomField>