SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/What_is_the_decision_criteria__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_decision_criteria__c</fullName>
    <label>What is the decision criteria?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>