SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/What_languages_are_their_apps_built_in__c.field-meta.xml
<CustomField>
    <fullName>What_languages_are_their_apps_built_in__c</fullName>
    <label>What languages are their apps built in?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Go</fullName>
            </value>
            <value>
                <fullName>Node.JS</fullName>
            </value>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Twisted</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Xamarin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>