SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Who_owns_the_technical_decision__c.field-meta.xml
<CustomField>
    <fullName>Who_owns_the_technical_decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who owns the technical decision?</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>POVs</relationshipLabel>
    <relationshipName>POVs</relationshipName>
    <type>Lookup</type>
</CustomField>