SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/fields/Why_would_they_choose_LD__c.field-meta.xml
<CustomField>
    <fullName>Why_would_they_choose_LD__c</fullName>
    <label>Why would they choose LD?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>