SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>POV_Start_Date__c</columns>
    <columns>POV_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>