SFDC_LD_Packages/objects-layouts/main/default/objects/POV__c/listViews/Completed_POVs.listView-meta.xml
<ListView>
    <fullName>Completed_POVs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed POVs</label>
    <sharedTo>
        <role>SE_Manager</role>
    </sharedTo>
</ListView>